Master: Added information in experience, projects and fixed the alignment of the close btn on mobile

--- a/assets/scss/layout/_responsive.scss
+++ b/assets/scss/layout/_responsive.scss
@@ -1,4 +1,4 @@
-@media screen and (min-height:320px) and (max-height: 768px) {
+@media screen and (min-width:320px) and (max-width: 768px) {
 
     .sidenav a {
       font-size: 18px;
@@ -9,4 +9,8 @@
       padding-right: 0px;
     }
 
+    .sidenav .closebtn {
+      left: 5px;
+      margin-left: 5px;
+    }
 }
