--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -72,7 +72,6 @@ p, ul, li, em {
     top: 10px;
     right: 35px;
     font-size: 45px;
-    margin-left: 50px;
   }
 
   .sidenav-heading {
